# refocus

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Launch EMA Cram Trainer.cmd  Launch Learning Companion.cmd  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.mjs
app/static/: index.html
app/tests/: acceptance.spec.mjs  api-client.test.mjs  content-loader.test.mjs  playwright-config.test.mjs  quiz-session.test.mjs  route-state.test.mjs  selectors.test.mjs  (+3 more)
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_focus_lenses.py  0003_github_missions.py  0004_oauth_transaction_slots.py  0005_learning_progress_snapshot.py
backend/app/: __init__.py  config.py  content_repository.py  database.py  dependencies.py  logging.py  main.py  models.py  progress_service.py  schemas.py
backend/app/routers/: __init__.py  auth.py  content.py  focus_lenses.py  github.py  health.py  missions.py  progress.py  recommendations.py
backend/app/security/: __init__.py  access_logs.py  redaction.py  sessions.py
backend/app/services/: __init__.py  focus_lenses.py  github_client.py  github_connections.py  github_verifier.py  recommendations.py
backend/tests/: conftest.py  test_access_logs.py  test_auth.py  test_content.py  test_focus_lenses.py  test_github_routes.py  test_github_verifier.py  test_health.py  test_migration.py  test_progress.py  test_recommendations.py  test_security.py  test_sessions.py  test_tooling.py
content/: topics.json
local-tts/: tts_server.py
(+31 files in other folders)
